# codex-brave-web-search

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  SECURITY.md  cliff.toml  deny.toml  release-plz.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflow-templates/: ci.template.yml  release-tag.template.yml
.github/workflows/: cargo-audit.yml  ci.yml  dependabot-automerge.yml  dependency-review.yml  live-smoke.yml  release-main.yml  release-plz.yml  scorecard.yml  security.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_brave_error_message.rs  parse_sections.rs
scripts/: register-mcp.sh  restore-mcp-from-backup.sh  uninstall-mcp.sh
src/: cache.rs  client.rs  config.rs  constants.rs  error.rs  formatting.rs  lib.rs  main.rs  mcp_server.rs  normalization.rs  parsing.rs  service.rs  throttle.rs  types.rs
tests/: cache_behavior.rs  live_smoke.rs  mcp_contract.rs  output_limits.rs  proptest_normalization.rs  pure_functions.rs  service_cancellation.rs  snapshots.rs  throttle_cancellation.rs  wiremock_integration.rs
tests/snapshots/: snapshots__help_all.snap  snapshots__search_error_envelope.snap  snapshots__status_no_probe.snap
