[package]
name = "codex-brave-web-search"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Brave Search MCP server for Codex (CLI/Desktop/IDE)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/lammesen/codex-brave-web-search"
readme = "README.md"
keywords = ["codex", "mcp", "brave-search", "search", "ai"]
categories = ["api-bindings", "command-line-utilities", "network-programming"]
exclude = [".github/", ".mcp-backups/", "fuzz/target/"]

[dependencies]
mcpkit = { version = "0.5", default-features = false, features = ["server", "tokio-runtime"] }
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
sha2 = "0.10"
hex = "0.4"
rand = "0.10"
url = "2.5"
regex = "1.11"
once_cell = "1.21"
httpdate = "1.0"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.16", features = ["v4", "fast-rng", "serde"] }

[dev-dependencies]
wiremock = "0.6"
insta = { version = "1.43", features = ["json"] }
proptest = "1.6"
temp-env = "0.3"
serial_test = "3.2"



[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
# Existing code exceptions
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
future_not_send = "allow"
if_not_else = "allow"
ignored_unit_patterns = "allow"
items_after_statements = "allow"
match_same_arms = "allow"
missing_const_for_fn = "allow"
missing_errors_doc = "allow"
multiple_crate_versions = "allow"
must_use_candidate = "allow"
needless_pass_by_value = "allow"
non_std_lazy_statics = "allow"
option_if_let_else = "allow"
redundant_closure_for_method_calls = "allow"
significant_drop_tightening = "allow"
struct_excessive_bools = "allow"
suboptimal_flops = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
unused_self = "allow"
uninlined_format_args = "allow"
useless_let_if_seq = "allow"
